--- a/notebooks/1_Retrieving_data.ipynb
+++ b/notebooks/1_Retrieving_data.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../src/datautil.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile ../src/datautil.py\n",
     "#datautil.py\n",
@@ -46,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/usr/home/atoris/course-project-thomas-wright/notebooks', '/usr/local/lib/python37.zip', '/usr/local/lib/python3.7', '/usr/local/lib/python3.7/lib-dynload', '', '/usr/local/lib/python3.7/site-packages', '/usr/local/lib/python3.7/site-packages/IPython/extensions', '/usr/home/atoris/.ipython', '/home/atoris/course-project-thomas-wright/src']\n"
+      "['/home/atoris/course-project-thomas-wright/src', '/usr/home/atoris/course-project-thomas-wright/notebooks', '/usr/local/lib/python37.zip', '/usr/local/lib/python3.7', '/usr/local/lib/python3.7/lib-dynload', '', '/usr/local/lib/python3.7/site-packages', '/usr/local/lib/python3.7/site-packages/IPython/extensions', '/usr/home/atoris/.ipython']\n"
      ]
     }
    ],
@@ -160,14 +152,19 @@
     "import sys\n",
     "project_dir = '/home/atoris/course-project-thomas-wright/src'\n",
     "if project_dir not in sys.path:\n",
-    "    sys.path.insert(0, project_dir)\n",
-    "\n",
-    "print(sys.path)"
+    "    sys.path.insert(0, project_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This next step actaully downloads all the data, this takes a while depnding on how fast you want to reload pages from the website, the rate limit is put into effect to not get blocked from the website."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +175,7 @@
     "\n",
     "url = 'https://www.cpubenchmark.net/mid_range_cpus.html'\n",
     "\n",
-    "df = du.download_data(url, 1, 1)\n"
+    "df = du.download_data(url, 75, 1)\n"
    ]
   },
   {
@@ -190,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +219,7 @@
        "      <th>Threads</th>\n",
        "      <th>Cores</th>\n",
        "      <th>Typical TDP</th>\n",
+       "      <th>Threads</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -235,16 +233,54 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>65W</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Intel Xeon E3-1220 v6 @ 3.00GHz</td>\n",
+       "      <td>$214.99</td>\n",
+       "      <td>FCLGA1151</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>72W</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Intel Xeon E5-2440 @ 2.40GHz</td>\n",
+       "      <td>$741.00*</td>\n",
+       "      <td>LGA 1356</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>95W</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Intel Core i7-4900MQ @ 2.80GHz</td>\n",
+       "      <td>$586.67*</td>\n",
+       "      <td>FCPGA946</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>47W</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Intel Xeon E3-1265L v3 @ 2.50GHz</td>\n",
+       "      <td>$699.95</td>\n",
+       "      <td>FCLGA1150</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>45W</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -252,16 +288,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                           name     price     Socket Clockspeed Turbo Speed  \\\n",
-       "0  Intel Core i5-6600 @ 3.30GHz  $262.13*  LGA 1151         3.3         3.9   \n",
-       "1                           NaN       NaN        NaN        NaN         NaN   \n",
+       "                               name     price      Socket Clockspeed  \\\n",
+       "0      Intel Core i5-6600 @ 3.30GHz  $262.13*   LGA 1151         3.3   \n",
+       "1   Intel Xeon E3-1220 v6 @ 3.00GHz   $214.99  FCLGA1151         3.0   \n",
+       "2      Intel Xeon E5-2440 @ 2.40GHz  $741.00*   LGA 1356         2.4   \n",
+       "3    Intel Core i7-4900MQ @ 2.80GHz  $586.67*   FCPGA946         2.8   \n",
+       "4  Intel Xeon E3-1265L v3 @ 2.50GHz   $699.95  FCLGA1150         2.5   \n",
        "\n",
-       "  Threads Cores Typical TDP  \n",
-       "0      4      4         65W  \n",
-       "1     NaN   NaN         NaN  "
+       "  Turbo Speed Threads Cores Typical TDP  Threads  \n",
+       "0         3.9      4      4         65W      NaN  \n",
+       "1         3.5      4      4         72W      NaN  \n",
+       "2         2.7     12      6         95W      NaN  \n",
+       "3         3.8      8      4         47W      NaN  \n",
+       "4         3.7      8      4         45W      NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
