--- a/notebooks/1_Retrieving_data.ipynb
+++ b/notebooks/1_Retrieving_data.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../src/datautil.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile ../src/datautil.py\n",
     "#datautil.py\n",
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +109,8 @@
     "\n",
     "                    else:\n",
     "                        temp2 = data[2]\n",
-    "                        temp1 = data[1]\n",
     "                        data[1] = data[1][1]\n",
-    "                        data[2] = temp1[3:]\n",
+    "                        data[2] = \"Threads\"\n",
     "                        data.append(temp2[1:])\n",
     "\n",
     "                    cpus[i][data[2]] = data[3]\n",
@@ -137,17 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/home/atoris/course-project-thomas-wright/src', '/usr/home/atoris/course-project-thomas-wright/notebooks', '/usr/local/lib/python37.zip', '/usr/local/lib/python3.7', '/usr/local/lib/python3.7/lib-dynload', '', '/usr/local/lib/python3.7/site-packages', '/usr/local/lib/python3.7/site-packages/IPython/extensions', '/usr/home/atoris/.ipython']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "project_dir = '/home/atoris/course-project-thomas-wright/src'\n",
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +174,7 @@
     "\n",
     "url = 'https://www.cpubenchmark.net/mid_range_cpus.html'\n",
     "\n",
-    "df = du.download_data(url, 75, 1)\n"
+    "df = du.download_data(url, 99, 1)\n"
    ]
   },
   {
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +218,6 @@
        "      <th>Threads</th>\n",
        "      <th>Cores</th>\n",
        "      <th>Typical TDP</th>\n",
-       "      <th>Threads</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -233,7 +231,6 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>65W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -245,7 +242,6 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>72W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -257,7 +253,6 @@
        "      <td>12</td>\n",
        "      <td>6</td>\n",
        "      <td>95W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -269,7 +264,6 @@
        "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>47W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -281,7 +275,6 @@
        "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>45W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -295,15 +288,15 @@
        "3    Intel Core i7-4900MQ @ 2.80GHz  $586.67*   FCPGA946         2.8   \n",
        "4  Intel Xeon E3-1265L v3 @ 2.50GHz   $699.95  FCLGA1150         2.5   \n",
        "\n",
-       "  Turbo Speed Threads Cores Typical TDP  Threads  \n",
-       "0         3.9      4      4         65W      NaN  \n",
-       "1         3.5      4      4         72W      NaN  \n",
-       "2         2.7     12      6         95W      NaN  \n",
-       "3         3.8      8      4         47W      NaN  \n",
-       "4         3.7      8      4         45W      NaN  "
+       "  Turbo Speed Threads Cores Typical TDP  \n",
+       "0         3.9      4      4         65W  \n",
+       "1         3.5      4      4         72W  \n",
+       "2         2.7     12      6         95W  \n",
+       "3         3.8      8      4         47W  \n",
+       "4         3.7      8      4         45W  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
