--- a/notebooks/1_Retrieving_data.ipynb
+++ b/notebooks/1_Retrieving_data.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
     "\n",
     "url = 'https://www.cpubenchmark.net/mid_range_cpus.html'\n",
     "\n",
-    "df = du.download_data(url, 99, 1)\n"
+    "df = du.download_data(url, 43, 1)\n"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +218,7 @@
        "      <th>Threads</th>\n",
        "      <th>Cores</th>\n",
        "      <th>Typical TDP</th>\n",
+       "      <th>Threads</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -231,6 +232,7 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>65W</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -242,6 +244,7 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>72W</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -253,6 +256,7 @@
        "      <td>12</td>\n",
        "      <td>6</td>\n",
        "      <td>95W</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -264,6 +268,7 @@
        "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>47W</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -275,6 +280,7 @@
        "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>45W</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -288,15 +294,15 @@
        "3    Intel Core i7-4900MQ @ 2.80GHz  $586.67*   FCPGA946         2.8   \n",
        "4  Intel Xeon E3-1265L v3 @ 2.50GHz   $699.95  FCLGA1150         2.5   \n",
        "\n",
-       "  Turbo Speed Threads Cores Typical TDP  \n",
-       "0         3.9      4      4         65W  \n",
-       "1         3.5      4      4         72W  \n",
-       "2         2.7     12      6         95W  \n",
-       "3         3.8      8      4         47W  \n",
-       "4         3.7      8      4         45W  "
+       "  Turbo Speed Threads Cores Typical TDP  Threads  \n",
+       "0         3.9      4      4         65W      NaN  \n",
+       "1         3.5      4      4         72W      NaN  \n",
+       "2         2.7     12      6         95W      NaN  \n",
+       "3         3.8      8      4         47W      NaN  \n",
+       "4         3.7      8      4         45W      NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
