--- a/notebooks/1_Retrieving_data.ipynb
+++ b/notebooks/1_Retrieving_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
     "    soup = get_soup(url)\n",
     "    table = soup.find('div', class_='chart')\n",
     "    rows = table.find_all('li')\n",
-    "    attributes = ['Socket', 'Clocks', 'Turbo ', 'Cores:', 'Typica']\n",
+    "    attributes = ['Class:', 'Socket', 'Clocks', 'Turbo ', 'Cores:', 'Typica']\n",
     "\n",
     "    i = 0\n",
     "    for row in rows:\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
     "\n",
     "url = 'https://www.cpubenchmark.net/mid_range_cpus.html'\n",
     "\n",
-    "df = du.download_data(url, 43, 1)\n"
+    "df = du.download_data(url, 75, 1)\n"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,13 +212,13 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>price</th>\n",
+       "      <th>Class</th>\n",
        "      <th>Socket</th>\n",
        "      <th>Clockspeed</th>\n",
        "      <th>Turbo Speed</th>\n",
        "      <th>Threads</th>\n",
        "      <th>Cores</th>\n",
        "      <th>Typical TDP</th>\n",
-       "      <th>Threads</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -226,83 +226,83 @@
        "      <th>0</th>\n",
        "      <td>Intel Core i5-6600 @ 3.30GHz</td>\n",
        "      <td>$262.13*</td>\n",
+       "      <td>Desktop</td>\n",
        "      <td>LGA 1151</td>\n",
        "      <td>3.3</td>\n",
        "      <td>3.9</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>65W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Intel Xeon E3-1220 v6 @ 3.00GHz</td>\n",
        "      <td>$214.99</td>\n",
+       "      <td>Server</td>\n",
        "      <td>FCLGA1151</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.5</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>72W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Intel Xeon E5-2440 @ 2.40GHz</td>\n",
        "      <td>$741.00*</td>\n",
+       "      <td>Server</td>\n",
        "      <td>LGA 1356</td>\n",
        "      <td>2.4</td>\n",
        "      <td>2.7</td>\n",
        "      <td>12</td>\n",
        "      <td>6</td>\n",
        "      <td>95W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Intel Core i7-4900MQ @ 2.80GHz</td>\n",
        "      <td>$586.67*</td>\n",
+       "      <td>Laptop</td>\n",
        "      <td>FCPGA946</td>\n",
        "      <td>2.8</td>\n",
        "      <td>3.8</td>\n",
        "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>47W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Intel Xeon E3-1265L v3 @ 2.50GHz</td>\n",
        "      <td>$699.95</td>\n",
+       "      <td>Server</td>\n",
        "      <td>FCLGA1150</td>\n",
        "      <td>2.5</td>\n",
        "      <td>3.7</td>\n",
        "      <td>8</td>\n",
        "      <td>4</td>\n",
        "      <td>45W</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               name     price      Socket Clockspeed  \\\n",
-       "0      Intel Core i5-6600 @ 3.30GHz  $262.13*   LGA 1151         3.3   \n",
-       "1   Intel Xeon E3-1220 v6 @ 3.00GHz   $214.99  FCLGA1151         3.0   \n",
-       "2      Intel Xeon E5-2440 @ 2.40GHz  $741.00*   LGA 1356         2.4   \n",
-       "3    Intel Core i7-4900MQ @ 2.80GHz  $586.67*   FCPGA946         2.8   \n",
-       "4  Intel Xeon E3-1265L v3 @ 2.50GHz   $699.95  FCLGA1150         2.5   \n",
+       "                               name     price    Class      Socket Clockspeed  \\\n",
+       "0      Intel Core i5-6600 @ 3.30GHz  $262.13*  Desktop   LGA 1151         3.3   \n",
+       "1   Intel Xeon E3-1220 v6 @ 3.00GHz   $214.99   Server  FCLGA1151         3.0   \n",
+       "2      Intel Xeon E5-2440 @ 2.40GHz  $741.00*   Server   LGA 1356         2.4   \n",
+       "3    Intel Core i7-4900MQ @ 2.80GHz  $586.67*   Laptop   FCPGA946         2.8   \n",
+       "4  Intel Xeon E3-1265L v3 @ 2.50GHz   $699.95   Server  FCLGA1150         2.5   \n",
        "\n",
-       "  Turbo Speed Threads Cores Typical TDP  Threads  \n",
-       "0         3.9      4      4         65W      NaN  \n",
-       "1         3.5      4      4         72W      NaN  \n",
-       "2         2.7     12      6         95W      NaN  \n",
-       "3         3.8      8      4         47W      NaN  \n",
-       "4         3.7      8      4         45W      NaN  "
+       "  Turbo Speed Threads Cores Typical TDP  \n",
+       "0         3.9      4      4         65W  \n",
+       "1         3.5      4      4         72W  \n",
+       "2         2.7     12      6         95W  \n",
+       "3         3.8      8      4         47W  \n",
+       "4         3.7      8      4         45W  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
