--- a/notebooks/1_Retrieving_data.ipynb
+++ b/notebooks/1_Retrieving_data.ipynb
@@ -69,7 +69,7 @@
     "    return soup\n",
     "\n",
     "def download_data(url, n=50, sleep=1):\n",
-    "    cpus = [dict() for x in range(n+1)]\n",
+    "    cpus = [dict() for x in range(n)]\n",
     "    soup = get_soup(url)\n",
     "    table = soup.find('div', class_='chart')\n",
     "    rows = table.find_all('li')\n",
@@ -126,6 +126,20 @@
     "\n",
     "                #Assign to dict\n",
     "                cpus[i][data[0]] = data[1]\n",
+    "                \n",
+    "        #Gathering scores from other part of dataset\n",
+    "        table = soup.find('div', class_= 'right-desc')\n",
+    "        body = table.find_all('p')\n",
+    "        multi_threaded_score = table.find_all('span')[1].get_text()\n",
+    "        \n",
+    "        data = table.get_text().split(\":\")\n",
+    "        data[1] = data[1][:5]\n",
+    "        data[1] = data[1].replace(\" \", \"\")\n",
+    "        single_threaded_score = data[1]\n",
+    "        print(single_threaded_score)\n",
+    "        \n",
+    "        cpus[i][\"mt_score\"] = int(multi_threaded_score)\n",
+    "        cpus[i][\"st_score\"] = int(single_threaded_score)\n",
     "\n",
     "        if i >= n-1:\n",
     "            break\n",
@@ -163,9 +177,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1231\n",
+      "1981\n",
+      "2261\n",
+      "2072\n",
+      "1298\n",
+      "1965\n",
+      "2005\n",
+      "2051\n",
+      "1954\n",
+      "2101\n",
+      "2200\n",
+      "1078\n",
+      "1827\n",
+      "2247\n",
+      "2074\n",
+      "2039\n",
+      "2065\n",
+      "2010\n",
+      "1659\n",
+      "2239\n",
+      "1693\n",
+      "1091\n",
+      "1977\n",
+      "1565\n",
+      "1321\n",
+      "2258\n",
+      "2124\n",
+      "1127\n",
+      "2040\n",
+      "1856\n",
+      "1893\n",
+      "1777\n",
+      "1777\n",
+      "2005\n",
+      "1911\n",
+      "1932\n",
+      "1060\n",
+      "1189\n",
+      "1874\n",
+      "1875\n",
+      "1849\n",
+      "2123\n",
+      "569\n",
+      "\n",
+      "1840\n",
+      "1157\n",
+      "1943\n",
+      "2012\n",
+      "1844\n",
+      "2200\n",
+      "2121\n",
+      "2062\n",
+      "2190\n",
+      "2186\n",
+      "1788\n",
+      "1165\n",
+      "1671\n",
+      "2052\n",
+      "971\n",
+      "\n",
+      "2102\n",
+      "1954\n",
+      "2108\n",
+      "2141\n",
+      "1932\n",
+      "1766\n",
+      "1807\n",
+      "1776\n",
+      "1790\n",
+      "1164\n",
+      "2150\n",
+      "1956\n",
+      "1578\n",
+      "1734\n",
+      "1548\n",
+      "1698\n",
+      "1688\n",
+      "1997\n",
+      "1943\n",
+      "2064\n",
+      "1464\n",
+      "1694\n",
+      "2164\n",
+      "1753\n",
+      "1734\n",
+      "1896\n",
+      "1663\n",
+      "1916\n",
+      "1932\n",
+      "1737\n",
+      "1735\n",
+      "1725\n",
+      "1784\n",
+      "2081\n",
+      "849\n",
+      "\n",
+      "2193\n",
+      "1726\n",
+      "1480\n",
+      "1782\n",
+      "1060\n",
+      "2308\n",
+      "2343\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -174,7 +298,7 @@
     "\n",
     "url = 'https://www.cpubenchmark.net/mid_range_cpus.html'\n",
     "\n",
-    "df = du.download_data(url, 75, 1)\n"
+    "df = du.download_data(url, 100, 1)\n"
    ]
   },
   {
@@ -186,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -213,96 +337,108 @@
        "      <th>name</th>\n",
        "      <th>price</th>\n",
        "      <th>Class</th>\n",
-       "      <th>Socket</th>\n",
        "      <th>Clockspeed</th>\n",
        "      <th>Turbo Speed</th>\n",
        "      <th>Threads</th>\n",
        "      <th>Cores</th>\n",
        "      <th>Typical TDP</th>\n",
+       "      <th>mt_score</th>\n",
+       "      <th>st_score</th>\n",
+       "      <th>Socket</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>AMD Opteron 6344</td>\n",
+       "      <td>$379.00*</td>\n",
+       "      <td>Server</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115W</td>\n",
+       "      <td>6069</td>\n",
+       "      <td>1231</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Intel Core i5-8250U @ 1.60GHz</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15W3</td>\n",
+       "      <td>6067</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>FC-BGA1356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>Intel Core i5-6600 @ 3.30GHz</td>\n",
        "      <td>$262.13*</td>\n",
        "      <td>Desktop</td>\n",
-       "      <td>LGA 1151</td>\n",
        "      <td>3.3</td>\n",
        "      <td>3.9</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>65W</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>2261</td>\n",
+       "      <td>LGA 1151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>Intel Xeon E3-1220 v6 @ 3.00GHz</td>\n",
        "      <td>$214.99</td>\n",
        "      <td>Server</td>\n",
-       "      <td>FCLGA1151</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.5</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>72W</td>\n",
+       "      <td>6048</td>\n",
+       "      <td>2072</td>\n",
+       "      <td>FCLGA1151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>Intel Xeon E5-2440 @ 2.40GHz</td>\n",
        "      <td>$741.00*</td>\n",
        "      <td>Server</td>\n",
-       "      <td>LGA 1356</td>\n",
        "      <td>2.4</td>\n",
        "      <td>2.7</td>\n",
        "      <td>12</td>\n",
        "      <td>6</td>\n",
        "      <td>95W</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Intel Core i7-4900MQ @ 2.80GHz</td>\n",
-       "      <td>$586.67*</td>\n",
-       "      <td>Laptop</td>\n",
-       "      <td>FCPGA946</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>47W</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Intel Xeon E3-1265L v3 @ 2.50GHz</td>\n",
-       "      <td>$699.95</td>\n",
-       "      <td>Server</td>\n",
-       "      <td>FCLGA1150</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>45W</td>\n",
+       "      <td>6040</td>\n",
+       "      <td>1298</td>\n",
+       "      <td>LGA 1356</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               name     price    Class      Socket Clockspeed  \\\n",
-       "0      Intel Core i5-6600 @ 3.30GHz  $262.13*  Desktop   LGA 1151         3.3   \n",
-       "1   Intel Xeon E3-1220 v6 @ 3.00GHz   $214.99   Server  FCLGA1151         3.0   \n",
-       "2      Intel Xeon E5-2440 @ 2.40GHz  $741.00*   Server   LGA 1356         2.4   \n",
-       "3    Intel Core i7-4900MQ @ 2.80GHz  $586.67*   Laptop   FCPGA946         2.8   \n",
-       "4  Intel Xeon E3-1265L v3 @ 2.50GHz   $699.95   Server  FCLGA1150         2.5   \n",
+       "                              name     price    Class Clockspeed Turbo Speed  \\\n",
+       "0                 AMD Opteron 6344  $379.00*   Server        2.6         3.2   \n",
+       "1    Intel Core i5-8250U @ 1.60GHz        NA   Laptop        1.6         3.4   \n",
+       "2     Intel Core i5-6600 @ 3.30GHz  $262.13*  Desktop        3.3         3.9   \n",
+       "3  Intel Xeon E3-1220 v6 @ 3.00GHz   $214.99   Server        3.0         3.5   \n",
+       "4     Intel Xeon E5-2440 @ 2.40GHz  $741.00*   Server        2.4         2.7   \n",
        "\n",
-       "  Turbo Speed Threads Cores Typical TDP  \n",
-       "0         3.9      4      4         65W  \n",
-       "1         3.5      4      4         72W  \n",
-       "2         2.7     12      6         95W  \n",
-       "3         3.8      8      4         47W  \n",
-       "4         3.7      8      4         45W  "
+       "  Threads Cores Typical TDP  mt_score  st_score        Socket  \n",
+       "0       1     1        115W      6069      1231           NaN  \n",
+       "1      8      4        15W3      6067      1981   FC-BGA1356   \n",
+       "2      4      4         65W      6059      2261     LGA 1151   \n",
+       "3      4      4         72W      6048      2072    FCLGA1151   \n",
+       "4     12      6         95W      6040      1298     LGA 1356   "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -391,12 +527,15 @@
       "├── \u001b[01;32mLICENSE\u001b[00m\r\n",
       "├── \u001b[01;32mREADME.md\u001b[00m\r\n",
       "├── \u001b[01;34mdata\u001b[00m\r\n",
-      "│   └── cpu_data.csv\r\n",
+      "│   ├── cpu_data.csv\r\n",
+      "│   ├── cpu_data_cleaned.csv\r\n",
+      "│   └── cpu_data_encoded.csv\r\n",
       "├── \u001b[01;34mmodels\u001b[00m\r\n",
       "├── \u001b[01;34mnotebooks\u001b[00m\r\n",
       "│   ├── \u001b[01;32m0_setup_project_folders.ipynb\u001b[00m\r\n",
       "│   ├── 1_Retrieving_data.ipynb\r\n",
       "│   ├── 2_Cleaning_data.ipynb\r\n",
+      "│   ├── 3_Simple_Graphs.ipynb\r\n",
       "│   └── \u001b[01;34m__pycache__\u001b[00m\r\n",
       "│       └── datautil.cpython-37.pyc\r\n",
       "├── \u001b[01;34mreport\u001b[00m\r\n",
@@ -408,7 +547,7 @@
       "    │   └── datautil.cpython-37.pyc\r\n",
       "    └── datautil.py\r\n",
       "\r\n",
-      "7 directories, 12 files\r\n"
+      "7 directories, 15 files\r\n"
      ]
     }
    ],
