--- a/notebooks/1_Retrieving_data.ipynb
+++ b/notebooks/1_Retrieving_data.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "                    else:\n",
     "                        temp2 = data[2]\n",
-    "                        data[1] = data[1][1]\n",
+    "                        data[1] = data[1][1:3]\n",
     "                        data[2] = \"Threads\"\n",
     "                        data.append(temp2[1:])\n",
     "\n",
@@ -284,6 +284,31 @@
       "Intel Core i9-10900X @ 3.70GHz\n",
       "Intel Xeon W-2255 @ 3.70GHz\n",
       "AMD EPYC 7F32\n",
+      "Intel Xeon Gold 6152 @ 2.10GHz\n",
+      "Intel Core i9-10910 @ 3.60GHz\n",
+      "AMD Ryzen 5 5600X\n",
+      "Intel Xeon E5-2698 v4 @ 2.20GHz\n",
+      "Intel Xeon Gold 5218 @ 2.30GHz\n",
+      "Intel Core i9-9900X @ 3.50GHz\n",
+      "AMD Ryzen 7 PRO 3700\n",
+      "Intel Xeon W-1290 @ 3.20GHz\n",
+      "Intel Xeon Gold 6136 @ 3.00GHz\n",
+      "Intel Xeon Gold 6130T @ 2.10GHz\n",
+      "Intel Core i9-10900F @ 2.80GHz\n",
+      "AMD Ryzen 7 4700G\n",
+      "Intel Core i9-7900X @ 3.30GHz\n",
+      "Intel Core i9-10900 @ 2.80GHz\n",
+      "AMD EPYC 7281\n",
+      "AMD Ryzen 7 PRO 4750G\n",
+      "AMD EPYC 7262\n",
+      "Intel Xeon E5-2696 v4 @ 2.20GHz\n",
+      "Intel Xeon W-2155 @ 3.30GHz\n",
+      "AMD Ryzen Threadripper 2990X\n",
+      "AMD Ryzen 7 PRO 4700G\n",
+      "AMD EPYC 7451\n",
+      "AMD Ryzen 7 4700GE\n",
+      "AMD Ryzen 7 PRO 4750GE\n",
+      "Intel Core i9-9820X @ 3.30GHz\n",
       "AMD Opteron 6344\n",
       "Intel Core i5-8250U @ 1.60GHz\n",
       "Intel Core i5-6600 @ 3.30GHz\n",
@@ -384,6 +409,31 @@
       "Intel Xeon E5-2430L @ 2.00GHz\n",
       "Intel Core i3-1005G1 @ 1.20GHz\n",
       "Intel Core i5-8365UE @ 1.60GHz\n",
+      "Intel Core i7-6822EQ @ 2.00GHz\n",
+      "Intel Xeon X5677 @ 3.47GHz\n",
+      "AMD FX-8310 Eight-Core\n",
+      "Intel Xeon E3-1240 @ 3.30GHz\n",
+      "Intel Core i5-6440HQ @ 2.60GHz\n",
+      "Intel Core i7-4702MQ @ 2.20GHz\n",
+      "Intel Xeon E3-1220 v3 @ 3.10GHz\n",
+      "Intel Xeon E5-2620 @ 2.00GHz\n",
+      "Intel Xeon E3-1225 v3 @ 3.20GHz\n",
+      "Intel Core i7-3615QE @ 2.30GHz\n",
+      "Intel Core i5-6400 @ 2.70GHz\n",
+      "Intel Core i5-4570 @ 3.20GHz\n",
+      "AMD Opteron 6272\n",
+      "Intel Xeon X5672 @ 3.20GHz\n",
+      "Intel Xeon E5-2420 @ 1.90GHz\n",
+      "Intel Core i7-3610QM @ 2.30GHz\n",
+      "Intel Core i5-7300HQ @ 2.50GHz\n",
+      "AMD FX-8370E Eight-Core\n",
+      "Intel Core i5-4590S @ 3.00GHz\n",
+      "Intel Core i7-3630QM @ 2.40GHz\n",
+      "AMD Opteron 6328\n",
+      "Intel Xeon Bronze 3204 @ 1.90GHz\n",
+      "Intel Xeon E3-1240L v3 @ 2.00GHz\n",
+      "Intel Core i5-4670S @ 3.10GHz\n",
+      "Intel Core i5-4670K CPT @ 3.40GHz\n",
       "Intel Pentium 4415U @ 2.30GHz\n",
       "Intel Core m7-6Y75 @ 1.20GHz\n",
       "Intel Atom C2750 @ 2.41GHz\n",
@@ -431,7 +481,13 @@
       "Intel Xeon X3230 @ 2.66GHz\n",
       "Intel Atom C2758 @ 2.40GHz\n",
       "Intel Xeon L5420 @ 2.50GHz\n",
-      "AMD Phenom II X4 920\n",
+      "AMD Phenom II X4 920\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Intel Core i7-640M @ 2.80GHz\n",
       "Intel Xeon E3-1220L @ 2.20GHz\n",
       "Intel Core i3-5015U @ 2.10GHz\n",
@@ -480,16 +536,35 @@
       "Intel Celeron 4305UE @ 2.00GHz\n",
       "Intel Core i3-4120U @ 2.00GHz\n",
       "Intel Celeron J4025 @ 2.00GHz\n",
-      "AMD Phenom 9850B Quad-Core\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "AMD Phenom 9850B Quad-Core\n",
       "Intel Core i7-2637M @ 1.70GHz\n",
       "AMD Phenom II X3 B77\n",
       "Intel Core i5-580M @ 2.67GHz\n",
+      "Intel Atom E3940 @ 1.60GHz\n",
+      "AMD PRO A6-9500\n",
+      "Intel Xeon X6550 @ 2.00GHz\n",
+      "Intel Xeon E5603 @ 1.60GHz\n",
+      "Intel Core i5-3317U @ 1.70GHz\n",
+      "Intel Celeron N3450 @ 1.10GHz\n",
+      "AMD Athlon II X4 620\n",
+      "Intel Xeon E5507 @ 2.27GHz\n",
+      "Intel Pentium G2120 @ 3.10GHz\n",
+      "Intel Xeon E5410 @ 2.33GHz\n",
+      "Intel Core2 Quad Q9100 @ 2.26GHz\n",
+      "Intel Core i5-2410M @ 2.30GHz\n",
+      "AMD Opteron 3320 EE\n",
+      "AMD FX-7500 APU\n",
+      "Intel Core i3-4025U @ 1.90GHz\n",
+      "AMD Opteron X2170 APU\n",
+      "Intel Core i5-3439Y @ 1.50GHz\n",
+      "Intel Core i3-2120 @ 3.30GHz\n",
+      "Intel Core i5-4422E @ 1.80GHz\n",
+      "Intel Core M-5Y10a @ 0.80GHz\n",
+      "AMD Athlon II X4 615e\n",
+      "AMD Opteron 2419 EE\n",
+      "Intel Core i7-820QM @ 1.73GHz\n",
+      "AMD Opteron 1385\n",
+      "Intel Core i7-840QM @ 1.87GHz\n",
       "Intel Core2 Duo T8300 @ 2.40GHz\n",
       "Athlon 64 Dual Core 5600+\n",
       "Intel Pentium E5200 @ 2.50GHz\n",
@@ -589,7 +664,32 @@
       "Intel Core2 Duo T8100 @ 2.10GHz\n",
       "Intel Celeron 1047UE @ 1.40GHz\n",
       "Dual-Core AMD Opteron 1220 SE\n",
-      "AMD Opteron 180\n"
+      "AMD Opteron 180\n",
+      "Intel Celeron 2955U @ 1.40GHz\n",
+      "Intel Core2 Duo T6600 @ 2.20GHz\n",
+      "Intel Pentium T4500 @ 2.30GHz\n",
+      "AMD Athlon 64 X2 Dual Core 5000+\n",
+      "Intel Core2 Duo E4600 @ 2.40GHz\n",
+      "Intel Core2 Duo T7400 @ 2.16GHz\n",
+      "Intel Atom Z3770 @ 1.46GHz\n",
+      "AMD GX-217GA SOC\n",
+      "Intel Pentium D 960 @ 3.60GHz\n",
+      "Intel Core2 Duo E6420 @ 2.13GHz\n",
+      "AMD Turion 64 X2 Mobile TL-62\n",
+      "AMD Athlon Dual Core 5600B\n",
+      "Athlon 64 Dual Core 3800+\n",
+      "Intel Pentium E2200 @ 2.20GHz\n",
+      "AMD Athlon Dual Core 4850e\n",
+      "AMD Athlon 64 X2 Dual Core 4600+\n",
+      "AMD Athlon 5200 Dual-Core\n",
+      "AMD Opteron 1216\n",
+      "Intel Core2 Duo T5870 @ 2.00GHz\n",
+      "Intel Celeron 2961Y @ 1.10GHz\n",
+      "AMD Turion X2 Ultra Dual-Core Mobile ZM-85\n",
+      "Intel Xeon 5150 @ 2.66GHz\n",
+      "AMD Athlon Dual Core 4850B\n",
+      "AMD Opteron 1216 HE\n",
+      "AMD E2-3000 APU\n"
      ]
     }
    ],
@@ -603,7 +703,7 @@
     "\n",
     "df = pd.DataFrame()\n",
     "for url in urls:\n",
-    "    df = pd.concat([df,du.download_data(url, 100, 1)])\n",
+    "    df = pd.concat([df,du.download_data(url, 125, 1)])\n",
     "\n",
     "df.reset_index(inplace=True)"
    ]
@@ -617,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -625,24 +725,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 400 entries, 0 to 399\n",
-      "Data columns (total 12 columns):\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 11 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   index        400 non-null    int64 \n",
-      " 1   name         400 non-null    object\n",
-      " 2   price        400 non-null    object\n",
-      " 3   Class        383 non-null    object\n",
-      " 4   Socket       382 non-null    object\n",
-      " 5   Clockspeed   400 non-null    object\n",
-      " 6   Turbo Speed  237 non-null    object\n",
-      " 7   Threads      400 non-null    object\n",
-      " 8   Cores        400 non-null    object\n",
-      " 9   Typical TDP  388 non-null    object\n",
-      " 10  mt_score     400 non-null    int64 \n",
-      " 11  st_score     400 non-null    int64 \n",
-      "dtypes: int64(3), object(9)\n",
-      "memory usage: 37.6+ KB\n"
+      " 0   name         500 non-null    object\n",
+      " 1   price        500 non-null    object\n",
+      " 2   Class        482 non-null    object\n",
+      " 3   Socket       478 non-null    object\n",
+      " 4   Clockspeed   500 non-null    object\n",
+      " 5   Turbo Speed  300 non-null    object\n",
+      " 6   Threads      500 non-null    object\n",
+      " 7   Cores        500 non-null    object\n",
+      " 8   Typical TDP  488 non-null    object\n",
+      " 9   mt_score     500 non-null    int64 \n",
+      " 10  st_score     500 non-null    int64 \n",
+      "dtypes: int64(2), object(9)\n",
+      "memory usage: 43.1+ KB\n"
      ]
     },
     {
@@ -666,7 +765,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>name</th>\n",
        "      <th>price</th>\n",
        "      <th>Class</th>\n",
@@ -683,7 +781,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>AMD Ryzen Threadripper PRO 3995WX</td>\n",
        "      <td>NA</td>\n",
        "      <td>Desktop</td>\n",
@@ -691,14 +788,13 @@
        "      <td>2.7</td>\n",
        "      <td>4.2</td>\n",
        "      <td>128</td>\n",
-       "      <td>6</td>\n",
+       "      <td>64</td>\n",
        "      <td>280W</td>\n",
        "      <td>88673</td>\n",
        "      <td>2676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>AMD Ryzen Threadripper 3990X</td>\n",
        "      <td>$3,849.99</td>\n",
        "      <td>Desktop</td>\n",
@@ -706,14 +802,13 @@
        "      <td>2.9</td>\n",
        "      <td>4.3</td>\n",
        "      <td>128</td>\n",
-       "      <td>6</td>\n",
+       "      <td>64</td>\n",
        "      <td>280W</td>\n",
        "      <td>80508</td>\n",
        "      <td>2545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>AMD EPYC 7702</td>\n",
        "      <td>$6,229.00</td>\n",
        "      <td>Server</td>\n",
@@ -721,14 +816,13 @@
        "      <td>2.0</td>\n",
        "      <td>3.4</td>\n",
        "      <td>128</td>\n",
-       "      <td>6</td>\n",
+       "      <td>64</td>\n",
        "      <td>200W</td>\n",
        "      <td>71859</td>\n",
        "      <td>2096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>AMD EPYC 7702P</td>\n",
        "      <td>$4,088.00</td>\n",
        "      <td>Server</td>\n",
@@ -736,14 +830,13 @@
        "      <td>2.0</td>\n",
        "      <td>3.4</td>\n",
        "      <td>128</td>\n",
-       "      <td>6</td>\n",
+       "      <td>64</td>\n",
        "      <td>200W</td>\n",
        "      <td>68213</td>\n",
        "      <td>2210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>AMD EPYC 7742</td>\n",
        "      <td>$7,549.35</td>\n",
        "      <td>Server</td>\n",
@@ -751,7 +844,7 @@
        "      <td>2.3</td>\n",
        "      <td>3.4</td>\n",
        "      <td>128</td>\n",
-       "      <td>6</td>\n",
+       "      <td>64</td>\n",
        "      <td>225W</td>\n",
        "      <td>67185</td>\n",
        "      <td>2376</td>\n",
@@ -761,29 +854,30 @@
        "</div>"
       ],
       "text/plain": [
-       "   index                               name      price    Class  Socket  \\\n",
-       "0      0  AMD Ryzen Threadripper PRO 3995WX         NA  Desktop  sTRX4    \n",
-       "1      1       AMD Ryzen Threadripper 3990X  $3,849.99  Desktop  sTRX4    \n",
-       "2      2                      AMD EPYC 7702  $6,229.00   Server    SP3    \n",
-       "3      3                     AMD EPYC 7702P  $4,088.00   Server    SP3    \n",
-       "4      4                      AMD EPYC 7742  $7,549.35   Server    SP3    \n",
+       "                                name      price    Class  Socket Clockspeed  \\\n",
+       "0  AMD Ryzen Threadripper PRO 3995WX         NA  Desktop  sTRX4         2.7   \n",
+       "1       AMD Ryzen Threadripper 3990X  $3,849.99  Desktop  sTRX4         2.9   \n",
+       "2                      AMD EPYC 7702  $6,229.00   Server    SP3         2.0   \n",
+       "3                     AMD EPYC 7702P  $4,088.00   Server    SP3         2.0   \n",
+       "4                      AMD EPYC 7742  $7,549.35   Server    SP3         2.3   \n",
        "\n",
-       "  Clockspeed Turbo Speed Threads Cores Typical TDP  mt_score  st_score  \n",
-       "0        2.7         4.2    128      6        280W     88673      2676  \n",
-       "1        2.9         4.3    128      6        280W     80508      2545  \n",
-       "2        2.0         3.4    128      6        200W     71859      2096  \n",
-       "3        2.0         3.4    128      6        200W     68213      2210  \n",
-       "4        2.3         3.4    128      6        225W     67185      2376  "
+       "  Turbo Speed Threads Cores Typical TDP  mt_score  st_score  \n",
+       "0         4.2    128     64        280W     88673      2676  \n",
+       "1         4.3    128     64        280W     80508      2545  \n",
+       "2         3.4    128     64        200W     71859      2096  \n",
+       "3         3.4    128     64        200W     68213      2210  \n",
+       "4         3.4    128     64        225W     67185      2376  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.drop('index', axis=1, inplace=True)\n",
     "df.info()\n",
-    "df.head(5)"
+    "df.head(5)\n"
    ]
   },
   {
@@ -795,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -900,6 +994,20 @@
    "source": [
     "Next step is to clean the rest of the data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
