--- a/notebooks/2_Cleaning_data.ipynb
+++ b/notebooks/2_Cleaning_data.ipynb
@@ -225,7 +225,7 @@
     "        price = price[1:]\n",
     "    if TDP[-1:] == \"W\":\n",
     "        TDP = TDP[:-1]\n",
-    "    elif (TDP[-1:] == \"2\") or (TDP[-1:] == \"3\"):\n",
+    "    elif ((TDP[-1:] == \"2\") or (TDP[-1:] == \"3\")):\n",
     "        if(TDP[-2:] == \"W\"):\n",
     "            TDP = TDP[:-2]\n",
     "        \n",
