--- a/notebooks/3_Simple_Graphs.ipynb
+++ b/notebooks/3_Simple_Graphs.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,22 +140,235 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ryzen Threadripper 3990X</td>\n",
+       "      <td>3,849.99</td>\n",
+       "      <td>sTRX4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>128</td>\n",
+       "      <td>64</td>\n",
+       "      <td>280</td>\n",
+       "      <td>80508</td>\n",
+       "      <td>2545</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EPYC 7702</td>\n",
+       "      <td>6,229.00</td>\n",
+       "      <td>SP3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>64</td>\n",
+       "      <td>200</td>\n",
+       "      <td>71859</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>EPYC 7702P</td>\n",
+       "      <td>4,088.00</td>\n",
+       "      <td>SP3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>64</td>\n",
+       "      <td>200</td>\n",
+       "      <td>68213</td>\n",
+       "      <td>2210</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EPYC 7742</td>\n",
+       "      <td>7,549.35</td>\n",
+       "      <td>SP3</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>128</td>\n",
+       "      <td>64</td>\n",
+       "      <td>225</td>\n",
+       "      <td>67185</td>\n",
+       "      <td>2376</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Ryzen 7 3700X</td>\n",
+       "      <td>304.99</td>\n",
+       "      <td>AM4</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>65</td>\n",
+       "      <td>22824</td>\n",
+       "      <td>2690</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Xeon Gold 6140</td>\n",
+       "      <td>2,863.75</td>\n",
+       "      <td>FCLGA3647</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>36</td>\n",
+       "      <td>18</td>\n",
+       "      <td>140</td>\n",
+       "      <td>22733</td>\n",
+       "      <td>1840</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Core i9-10900X</td>\n",
+       "      <td>589.00</td>\n",
+       "      <td>FCLGA2066</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>165</td>\n",
+       "      <td>22697</td>\n",
+       "      <td>2726</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Xeon W-2255</td>\n",
+       "      <td>778.00</td>\n",
+       "      <td>FCLGA2066</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>165</td>\n",
+       "      <td>22687</td>\n",
+       "      <td>2776</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>EPYC 7F32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SP3</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>180</td>\n",
+       "      <td>22303</td>\n",
+       "      <td>2447</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            name price  Socket  Clockspeed  Turbo Speed  \\\n",
-       "0  Ryzen Threadripper PRO 3995WX   NaN  sTRX4          2.7          4.2   \n",
+       "                             name     price      Socket  Clockspeed  \\\n",
+       "0   Ryzen Threadripper PRO 3995WX       NaN      sTRX4          2.7   \n",
+       "1        Ryzen Threadripper 3990X  3,849.99      sTRX4          2.9   \n",
+       "2                       EPYC 7702  6,229.00        SP3          2.0   \n",
+       "3                      EPYC 7702P  4,088.00        SP3          2.0   \n",
+       "4                       EPYC 7742  7,549.35        SP3          2.3   \n",
+       "..                            ...       ...         ...         ...   \n",
+       "95                  Ryzen 7 3700X    304.99        AM4          3.6   \n",
+       "96                Xeon Gold 6140   2,863.75  FCLGA3647          2.3   \n",
+       "97                Core i9-10900X     589.00  FCLGA2066          3.7   \n",
+       "98                   Xeon W-2255     778.00  FCLGA2066          3.7   \n",
+       "99                      EPYC 7F32       NaN        SP3          3.7   \n",
        "\n",
-       "   Threads  Cores Typical TDP  mt_score  st_score  class_Desktop  \\\n",
-       "0      128     64         280     88673      2676              1   \n",
+       "    Turbo Speed  Threads  Cores Typical TDP  mt_score  st_score  \\\n",
+       "0           4.2      128     64         280     88673      2676   \n",
+       "1           4.3      128     64         280     80508      2545   \n",
+       "2           3.4      128     64         200     71859      2096   \n",
+       "3           3.4      128     64         200     68213      2210   \n",
+       "4           3.4      128     64         225     67185      2376   \n",
+       "..          ...      ...    ...         ...       ...       ...   \n",
+       "95          4.4       16      8          65     22824      2690   \n",
+       "96          3.7       36     18         140     22733      1840   \n",
+       "97          4.7       20     10         165     22697      2726   \n",
+       "98          4.7       20     10         165     22687      2776   \n",
+       "99          3.9       16      8         180     22303      2447   \n",
        "\n",
-       "   class_Laptop  class_Server  brand_Amd  brand_Intel  \n",
-       "0             0             0          1            0  "
+       "    class_Desktop  class_Laptop  class_Server  brand_Amd  brand_Intel  \n",
+       "0               1             0             0          1            0  \n",
+       "1               1             0             0          1            0  \n",
+       "2               0             0             1          1            0  \n",
+       "3               0             0             1          1            0  \n",
+       "4               0             0             1          1            0  \n",
+       "..            ...           ...           ...        ...          ...  \n",
+       "95              1             0             0          1            0  \n",
+       "96              0             0             1          0            1  \n",
+       "97              1             0             0          0            1  \n",
+       "98              0             0             0          0            1  \n",
+       "99              0             0             1          1            0  \n",
+       "\n",
+       "[100 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +379,7 @@
     "\n",
     "df = du.load_data(url, filename)\n",
     "df.info()\n",
-    "df.head(1)"
+    "df.head(100)"
    ]
   },
   {
