--- a/notebooks/0_setup_project_folders.ipynb
+++ b/notebooks/0_setup_project_folders.ipynb
@@ -52,6 +52,20 @@
    "source": [
     "!tree ../"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Warning if you run the next notebook it will take a long time to load due to having to scrape the web for data.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
