--- a/notebooks/3_Simple_Graphs.ipynb
+++ b/notebooks/3_Simple_Graphs.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project my goal is to be able to look at a CPU and be able to tell what factors make that CPU fast. We can do this by looking at all the things that can affect a CPU speed graph and analyze them to come up with some rules and guidelines that can help us choose a CPU that want"
+    "In this project my goal is to be able to look at a CPU and be able to tell what factors make that CPU fast. We can do this by looking at all the things that can affect a CPU speed graph and analyze them to come up with some rules and guidelines that can help us choose a CPU that performs well."
    ]
   },
   {
